--- a/package.json
+++ b/package.json
@@ -11,29 +11,37 @@
   "author": "jack lam <jacklam718@gmail.com> (https://github.com/jacklam718)",
   "license": "ISC",
   "dependencies": {
-    "babel": "^5.8.23",
-    "babelify": "^6.3.0",
-    "bower": "^1.5.2",
+    "babel": "^6.5.2",
+    "babelify": "^7.2.0",
+    "bower": "^1.5.2"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.9.5",
-    "browserify": "^11.1.0",
+    "browserify": "9.0.8",
     "del": "^2.2.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-add-src": "^0.2.0",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-concat-css": "^2.2.0",
     "gulp-if": "^2.0.0",
+    "gulp-load-plugins": "^1.2.0",
     "gulp-nodemon": "^2.0.4",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.1.1",
+    "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-uglifycss": "^1.0.5",
     "gulp-uglifyjs": "^0.6.2",
+    "gulp-watch-sequence": "^1.0.0",
     "node-notifier": "^4.4.0",
-    "run-sequence": "^1.1.4",
+    "sassify": "^0.10.0",
     "stringify": "^3.1.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.4.0"
+    "vinyl-source-stream": "^1.1.0"
   }
 }
